[FIX] restTemplate을 사용해서 외부 API를 사용하도록 변경